--- a/elevatorMan/MaintInfoView.xib
+++ b/elevatorMan/MaintInfoView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +21,7 @@
                         <constraint firstAttribute="height" constant="25" id="ehw-yz-uSV"/>
                         <constraint firstAttribute="width" constant="25" id="iJj-ey-11X"/>
                     </constraints>
-                    <state key="normal" image="marker_address.png"/>
+                    <state key="normal" image="icon_maint_down.png"/>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAM-av-GMk">
                     <rect key="frame" x="0.0" y="41" width="375" height="40"/>
@@ -70,7 +70,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g2m-mj-s1T">
                     <rect key="frame" x="0.0" y="81" width="375" height="60"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_location.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qfi-SG-E66">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_maint_address.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qfi-SG-E66">
                             <rect key="frame" x="8" y="15" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="BLd-xz-an1"/>
@@ -102,7 +102,7 @@
                         <constraint firstAttribute="height" constant="1" id="gi0-mT-1h0"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_location.png" translatesAutoresizingMaskIntoConstraints="NO" id="kmX-sc-S9U">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_maint_link.png" translatesAutoresizingMaskIntoConstraints="NO" id="kmX-sc-S9U">
                     <rect key="frame" x="8" y="150" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="Ln8-Pi-iay"/>
@@ -125,7 +125,7 @@
                         <constraint firstAttribute="height" constant="1" id="b4Q-oG-oWW"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_location.png" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-tc-Yg8">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_maint_appoint.png" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-tc-Yg8">
                     <rect key="frame" x="8" y="197" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="IaP-sd-tSg"/>
@@ -384,7 +384,9 @@
         </view>
     </objects>
     <resources>
-        <image name="icon_location.png" width="70" height="70"/>
-        <image name="marker_address.png" width="36" height="36"/>
+        <image name="icon_maint_address.png" width="180" height="180"/>
+        <image name="icon_maint_appoint.png" width="180" height="180"/>
+        <image name="icon_maint_down.png" width="180" height="180"/>
+        <image name="icon_maint_link.png" width="180" height="180"/>
     </resources>
 </document>
