--- a/elevatorMan/RepairInfoView.xib
+++ b/elevatorMan/RepairInfoView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -274,6 +274,7 @@
                 <outlet property="btnPay" destination="d91-ZJ-baQ" id="wXD-d2-ivK"/>
                 <outlet property="btnTask" destination="uKp-hb-pz9" id="TMj-H8-ueW"/>
                 <outlet property="ivFault" destination="q8b-UX-TKB" id="8ZO-dg-iqO"/>
+                <outlet property="ivTitleTask" destination="I7U-0c-chy" id="JS2-QP-vG5"/>
                 <outlet property="lbAddress" destination="IfI-Tb-MkY" id="iq6-62-ugL"/>
                 <outlet property="lbAppoint" destination="8DH-9z-995" id="IOj-9q-CMZ"/>
                 <outlet property="lbBrand" destination="GaY-5z-cCQ" id="L77-EA-rmi"/>
@@ -284,6 +285,7 @@
                 <outlet property="lbTitleOrder" destination="BQW-Zj-0bw" id="YPY-Nt-Z8L"/>
                 <outlet property="lbTitleTask" destination="8G6-h6-AaS" id="hKt-rd-Jro"/>
                 <outlet property="lbWeight" destination="KxP-mH-qix" id="Tq8-kk-zRC"/>
+                <outlet property="viewSeparator" destination="q5r-Zc-8nr" id="S0b-8g-4fS"/>
             </connections>
             <point key="canvasLocation" x="-2.5" y="60"/>
         </view>
